style.css
@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');

* {
  box-sizing: border-box;
}

body {
  font-family: 'Muli', sans-serif;
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: center;
  height: 100vh;
  overflow: hidden;
}

h1 {
  margin-top: 1em;
  margin-bottom: 0;
}
h4 {
  margin-top: 0.5em;
  color: red;
}

.container {
  width: 90%;
  max-width: 1080px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.painting {
  background-image: url(img/sunday-in-the-park.jpeg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 75vh;
  width: 50px;
  cursor: pointer;
  transition: all 0.4s ease-in;
  border-radius: 5px;
}

.check {
  width: 100%;
  background-size: contain;
  cursor: default;
}

.info {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin: 1em;
  margin-bottom: 1.5em;
  opacity: 0;
}
/* 
.hidden {
  display: none;
} */

.answer {
  display: flex;
  flex-direction: column;
  line-height: 1;
}

p {
  margin: 0.2em 3em 0.2em 0;
}

.title {
  font-style: italic;
}

.newPainting {
  background-color: #555;
  color: white;
  border: none;
  font-size: 18px;
  padding: 0.5em 1em;
  border-radius: 10px;
}

.newPainting:hover {
  background-color: black;
  cursor: pointer;
}

span {
  margin-right: 0.2em;
}

